--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Altas Habilidades</title>
+    <title>Document</title>
+    <link rel="icon" href="./img/LogoNaahs.png">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
 </head>
+<!--BARRA DE NAVEGAÇÃO-->
 <body>
-    <H1>Site da turma de Altas habilidades e Superdotação</H1>
-    <img src="logo.png">
+    <div class="nav">
+        <img class="logo" src="./img/Naahs.png" alt="Logo do Naahs">
+        <div class="links">
+            <div class="link">
+                <h3><a href="#introducao"> INTRODUÇÃO</a></h1>
+                <h3><a href="#projetos">PROJETOS </a></h1>
+                <h3><a href="#equipes"> EQUIPES</a></h1>
+                <h3><a href="#eventos"> EVENTOS</a></h1>
+                <h3><a href="#depoimentos"> DEPOIMENTOS</a></h1>
+                <h3><a href="#contato"> CONTATO</a></h1>
+            </div>
+        </div>
+    </div>
+    <!--INTRODUÇÃO-->
+    <div class="introducao" id="introducao">
+        <div class="titulo">
+            <div>
+                <h1>Turma De Altas Habilidades</h1>
+                <h2>Desenvolvendo o Potencial Dos Alunos Talentosos</h2>
+            </div>
+            <p class="paragrafo">
+                ㅤㅤㅤAlunos com altas habilidades, também conhecidos como superdotados, são aqueles que demonstram um desempenho significativamente superior em áreas específicas ou em múltiplos domínios, como intelectual, acadêmico, criativo, artístico ou em liderança. Esses estudantes possuem uma capacidade de aprendizagem rápida e uma compreensão aprofundada dos temas, muitas vezes acompanhada de uma curiosidade intensa e um desejo constante de desafios. Reconhecer e apoiar esses alunos é essencial para garantir que suas necessidades educacionais únicas sejam atendidas, promovendo um desenvolvimento pleno de seu potencial.
+            </p>
+        </div>
+        <img src="./img/LogoNaahs.png" >
+    </div>
 </body>
+
 </html>
